[build-system]
requires = ["setuptools>=80.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yasa"
description = "YASA: Analysis of polysomnography recordings."
readme = "README.rst"
license = {text = "BSD (3-clause)"}
authors = [
    {name = "Raphael Vallat", email = "raphaelvallat9@gmail.com"},
    {name = "Remington Mallett", email = "mallett.remy@gmail.com"},
]
maintainers = [
    {name = "Raphael Vallat", email = "raphaelvallat9@gmail.com"},
    {name = "Remington Mallett", email = "mallett.remy@gmail.com"},
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.22.4",
    "scipy>=1.8.1",
    "pandas>=2.1.1",
    "matplotlib",
    "seaborn",
    "mne>=1.3",
    "numba>=0.57.1",
    "antropy",
    "scikit-learn",
    "tensorpac>=0.6.5",
    "pyriemann>=0.2.7",
    "sleepecg>=0.5.0",
    "lspopt>=1.4",
    "ipywidgets",
    "joblib",
    "lightgbm",
    "pooch>=1.8",
]

[dependency-groups]
dev = [
    "ruff>=0.9",
]
test = [
    "pytest>=6",
    "pytest-cov",
    # Ensure coverage is new enough for `source_pkgs`.
    "coverage[toml]>=5.3",
]
docs = [
    "sphinx>=8.1",
    "sphinx-design>=0.6",
    "sphinx-copybutton>=0.5",
    "sphinx-notfound-page>=1",
    "sphinx-reredirects>=0.1",
    "pydata-sphinx-theme>0.16",
    "numpydoc>=1.8",
]

[project.urls]
Homepage = "https://github.com/raphaelvallat/yasa/"
Downloads = "https://github.com/raphaelvallat/yasa/"

[tool.setuptools]
py-modules = ["yasa"]
include-package-data = true

[tool.setuptools.package-data]
yasa = [
    "classifiers/*.joblib",
]

[tool.setuptools.packages.find]
namespaces = false
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "yasa.__version__"}

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--showlocals --durations=10 --maxfail=2 --cov"
doctest_optionflags= ["NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]
filterwarnings = [
    "ignore::UserWarning",
    "ignore::RuntimeWarning",
    "ignore::FutureWarning",
]
markers = ["slow"]

[tool.coverage.run]
branch = true
omit = [
    "*/setup.py",
    "*/examples/*",
    "*/tests/*",
    "*/classifiers/*",
]
source_pkgs = ["yasa"]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.report]
show_missing = true
# sort = "Cover"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    "__init__.py",  # Skip init files bc they use star imports (breaking rules F401, F403)
    "notebooks",  # Skip jupyter notebook examples
    "docs",
]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.flake8-import-conventions.aliases]
"matplotlib.pyplot" = "plt"
numpy = "np"
"numpy.typing" = "npt"
pandas = "pd"
seaborn = "sns"
scipy = "sp"

[tool.ruff.lint]
select = [
    "E4",  # Subset of pycodestyle rules
    "E7",  # Subset of pycodestyle rules
    "E9",  # Subset of pycodestyle rules
    "F",  # All Pyflakes rules
    "NPY",  # numpy
    "W",
    "I",
]

ignore = [
    "NPY002",  # exclude numpy random
]
